# hypnosia-launcher

./: .env.example  .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v0.1.24.md  index.html  launcher-profile-backend.ts  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/patches/alloc-no-stdlib-shim/: Cargo.toml
src-tauri/patches/alloc-stdlib/: Cargo.toml
src-tauri/patches/brotli-decompressor/: Cargo.toml
src-tauri/src/: hardware_fingerprint.rs  lib.rs  minecraft.rs
src/components/: ProfileSection.tsx  SkinViewer3D.tsx
src/hooks/: useAccount.ts  useUpdater.ts
src/lib/: api.ts  updater.ts
src/pages/: AccountPage.tsx  HomePage.tsx  SettingsPage.tsx
src/types/: account.ts
