[package]
name = "app"
version = "0.1.23"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["devtools"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2.3.2"
tauri-plugin-updater = "2"
sha2 = "0.10.8"
rand = "0.8"
chrono = "0.4.45"
dotenvy = "0.15"
reqwest = { version = "0.13.3", features = ["json"] }
dirs = "6.0.0"
url = "2.5.8"
urlencoding = "2.1"
base64 = "0.22"
tokio = { version = "1.52.3", features = ["full"] }
minecraft-java-rs-core = { git = "https://github.com/fitzxel/minecraft-java-rs-core", version = "0.2.1" }

[patch.crates-io]
brotli-decompressor = { path = "patches/brotli-decompressor" }
alloc-stdlib = { path = "patches/alloc-stdlib" }
